src/scss/modules/_faq.scss
.faq {
	@media (min-width: 1024px) {
		padding-top: 1em;
		max-width: 740px;
		margin-left: auto;
	}
	&__box {
		@media (min-width: 1024px){
			display: flex;
			gap: 2em;
		}
	}
	&__pict {
		flex-shrink: 0.38;
		@media (min-width: 1360px){
			&--m-r {
				position: relative;
				left: 3em;
			}
		}
		@media (max-width: 1023px){
			display: none;
		}
	}
}
.accordion {
	&__item {
		border-bottom: 1px solid $border;
		.accordion__trigger {
			display: flex;
			align-items: center;
			justify-content: space-between;
			gap: 1.2em;
			padding-top: 1.4em;
			padding-bottom: 1.4em;
			position: relative;
			z-index: 1;
			cursor: pointer;
			-webkit-tap-highlight-color: rgba(1,1,1,.02);
			&:after {
				content: '';
				flex-shrink: 0;
				width: 2.6em;
				height: 2.6em;
				margin-top: -1.5em;
				margin-bottom: -1.5em;
				border-radius: 50%;
				border-radius: 50%;
				display: flex;
				align-items: center;
				justify-content: center;
				display: inline-block;
				background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M20 11L20 29' stroke='%232685C4' stroke-width='3' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M29 20L11 20' stroke='%232685C4' stroke-width='3' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
				background-repeat: no-repeat;
				background-position: center;
				margin-left: auto;
				transition: .2s;
			}
			@media (max-width: 1100px){
				padding-top: 1.2em;
				padding-bottom: 1.2em;
				line-height: 1.4;
				gap: .6em;
				&:after {
					width: 2em;
					height: 2em;
					background-size: contain;
				}
			}
			@media (max-width: 500px){
				padding-top: 1.1em;
				padding-bottom: 1.1em;
				gap: 0.4em;
				&:after {
					align-self: flex-start;
					margin: 0 0 0 auto;
				}
			}
		}
		&.expanded {
			.accordion__trigger {
				&:after {
					background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M29 20L11 20' stroke='%23FA5D32' stroke-width='3' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
				}
			}
		}
	}
	&__title {
		font-size: em(19);
		font-weight: 600;
		line-height: 1.5;
		margin-right: auto;
		user-select: none;
	}
	&__hidden {
		user-select: none;
		display: block;
		height: 0;
		padding: 0;
		overflow: hidden;
		opacity: 0;
		transition: padding .3s, opacity .4s;
		font-size: em(17);
		.expanded & {
			height: auto;
			opacity: 1;
			transition: padding .3s, opacity .3s;
			padding: .1em 0 .8em;
			display: flex;
			flex-direction: column;
			gap: 0.2em;
			@media (max-width: 1100px){
				padding: .2em 0 .4em;
			}
		}
	}
}

